src/analizadorJCC/CorreoExp.jj
PARSER_BEGIN(Correo)

import java.io.*;
import java.util.Scanner;

public class Correo {
    public static boolean bandera;
    public static void main(String args[]) throws ParseException {
        try{
            Scanner sc = new Scanner(System.in);
            System.out.println("Introdusca 1.- analisis lexico o 2.- para analisis sintactico: ");
            int n = sc.nextInt();
            if(n==1){
                System.out.println("Analisis Lexico en proceso");
                Correo parser = new Correo(System.in);
                parser.iniciarAnalisisLexico();
            }else{
                System.out.println("Analisis Sintactico en proceso");
                Correo parser = new Correo(System.in);
                parser.ExpressionList();   
            }
            System.out.println("\tAnalisis Finalizado");
        }catch(ParseException e){
            System.out.println(e.getMessage());
    	System.out.println("\tAnalisis Finalizado");
        }
   }
}
PARSER_END(Correo)

SKIP :
{ " " | "\t" | "\n" | "\r" | "\r\n" }
 
//Lista de Tokens (elementos posibles en un correo)

TOKEN : { 
    < CADENA: ["a"-"z","A"-"Z"] ( ["a"-"z","A"-"Z","0"-"9"] )*> {if(Correo.bandera)System.out.println("Identificador: " + image);}
    | < CARACTER: ("+" | "-" | "_") > {if(Correo.bandera)System.out.println("Identificador: " + image);}
    | < SEPARADOR: ("@") > {if(Correo.bandera)System.out.println("Identificador: " + image);}
    | < PUNTO: (".") > {if(Correo.bandera)System.out.println("Identificador: " + image);}
}

//este metodo inicia el analizador lexico
void iniciarAnalisisLexico() :
{Correo.bandera = true;}
{ { System.out.println("Introdusca un correo electronico: ");
    System.out.println(""); 
  }
    (
    <CADENA>
    |<CARACTER>	
    |<SEPARADOR>
    |<PUNTO>
    )*
}

//este metodo inicia el analizador sintactico
void ExpressionList() :
{Correo.bandera = false; String s; }
{ { System.out.println("Introdusca un correo electronico: ");
    System.out.println(""); 
  }
  (Correo())* <EOF>
}

//Forma de la estructura de un correo --> parteLocal + separador(@) + dominio
void Correo():
{ }
{ <CADENA>((<CARACTER>|<PUNTO>)<CADENA>)*<SEPARADOR><CADENA>(".")<CADENA> }
